Fix var name mistake in web_data free_search
